example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar-2.snap
---
source: example/src/repetitions.rs
expression: "grammar::parse(\"1\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "symbol 6",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 1,
            end: 1,
        },
    ],
)
