example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2-2.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"1\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                0,
                0,
            ),
        },
    },
)
