example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 0,
            end: 0,
        },
    ],
)
