example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3-5.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"1,, 2,\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                0,
                0,
            ),
        },
        metadata: 123,
    },
)
